# copper

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  premake5.lua
Copper/: CMakeLists.txt  premake5.lua
Copper/src/: cprpch.h
Copper/src/Copper/: Application.cpp  Application.h  Core.h  ImGuiHandler.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  OrthoCameraController.cpp  OrthoCameraController.h  Platform.h  Timestep.h  Window.h
Copper/src/Copper/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  ImGuiHandler.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.h  MouseCodes.h  Timestep.h  Window.h  hash.cpp  hash.h  siphash.cpp
Copper/src/Copper/Core/io/: FileReadStream.cpp  FileReadStream.h  FileWriteStream.cpp  FileWriteStream.h  IDataProcessor.h  IReadStream.h  IWriteStream.h  ReadStreamBase.cpp  ReadStreamBase.h  WriteStreamBase.cpp  WriteStreamBase.h  ZlibCompresser.cpp  ZlibCompresser.h
Copper/src/Copper/Debug/: DebugLayer.cpp  DebugLayer.h  DebugProfiler.cpp  DebugProfiler.h
Copper/src/Copper/Event/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Copper/src/Copper/Renderer/: Buffer.cpp  Buffer.h  Camera.h  GraphicContext.h  OrthoCamera.cpp  OrthoCamera.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.h  Shader.cpp  Shader.h  ShaderData.cpp  ShaderData.h  Texture.h  VertexArray.cpp  VertexArray.h
Copper/src/Copper/Resource/: BundleDeserializer.cpp  BundleDeserializer.h  BundleSerializer.cpp  BundleSerializer.h  FileMime.cpp  FileMime.h  Resource.cpp  Resource.h  Rms.cpp  Rms.h  context.h
Copper/src/Copper/Resource/bundle-sections/: assetssection.cpp  assetssection.h  metatablesection.cpp  metatablesection.h  versionsection.cpp  versionsection.h
Copper/src/Platform/: MacOsWindow.cpp  MacOsWindow.h
Copper/src/Platform/MacOs/: MacOsImGuiHandler.cpp  MacOsImGuiHandler.h  MacOsInput.cpp  MacOsInput.h  MacOsPlatform.cpp  MacOsPlatform.h  MacOsRenderCommand.cpp  MacOsWindow.cpp  MacOsWindow.h
Copper/src/Platform/MacOs/Renderer/: MacOsBuffer.cpp  MacOsShader.cpp  MacOsTexture.cpp  MacOsVertexArray.cpp
Copper/src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Copper/tests/: CMakeLists.txt
Copper/tests/resources/: testbundle.xml
Copper/tests/src/Resource/: BundleSerializeDeserializeTest.cpp
Copper/tests/src/fixtures/: BaseApplicationTest.cpp  BaseApplicationTest.h
Sandbox/: CMakeLists.txt  premake5.lua
Sandbox/assets/: FlatColor.glsl  Texture.glsl  texture.glsl
Sandbox/src/: ExampleLayer.cpp  ExampleLayer.h  Sandbox.cpp  Sandbox.h  Sandbox2D.cpp  Sandbox2D.h  main.cpp
